--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <ul class="nav">
               <!-- <li class="scroll-to-section"><a href="#top" class="active">Home</a></li> -->
       
-              <li class="scroll-to-section"><div class="active"><a href="#top">الرئسية</a></div></li> 
+              <li class="scroll-to-section"><div class="active"><a href="#top">الرئيسية</a></div></li> 
               <li class="scroll-to-section"><a href="About.html">من نحن</a></li>
               <li class="scroll-to-section"><a href="https://codes-man.blogspot.com/">المدونة</a></li>
               <li class="scroll-to-section"><a href="#contact">تواصل معنا</a></li>
