--- a/About.html
+++ b/About.html
@@ -47,7 +47,7 @@
                 <!-- ***** Logo End ***** -->
                 <!-- ***** Menu Start ***** -->
                 <ul class="nav">
-                  <li class="scroll-to-section"><div class="active"><a href="index.html#top">الرئسية</a></div></li> 
+                  <li class="scroll-to-section"><div class="active"><a href="index.html#top">الرئيسية</a></div></li> 
 
               <li class="scroll-to-section"><a href="About.html">من نحن</a></li>
               <li class="scroll-to-section"><a href="https://codes-man.blogspot.com/">المدونة</a></li>
